--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
+    "react-butterfiles": "^1.3.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
