--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.4",
+    "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-butterfiles": "^1.3.3",
     "react-dom": "^16.9.0",
