--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.1"
+    "redux-saga": "^1.1.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
